--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
       <!-- Cargando archivo predict.js -->
       <script src="jscript/predict.js"></script>
 
+      <script>
+        // Simulamos clic en el botón de predicción al cargar la página
+        document.addEventListener('DOMContentLoaded', function() {
+          document.getElementById('predict-button').click();
+        });
+      </script>
+
     </div> <!-- w3-content -->
   </div>
 </body>
