--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.13.3/dist/tf.min.js"></script>
+  <script src="TARGET_CLASSES.js"></script>
   <script>
     $(document).ready(function() {
       let model;
