--- a/index.html
+++ b/index.html
@@ -249,21 +249,23 @@
 
         let offset = tf.scalar(127.5);
         tensor = tensor.sub(offset)
-          .div(offset)
+          .div(offset) 
           .expandDims();
 
         let predictions = await model.predict(tensor).data();
         let top5 = Array.from(predictions)
-          .map(function(p, i) {
-            return {
-              probability: p,
-              className: TARGET_CLASSES[i]
+            .map(function(p, i) {
+             return {
+                 probability: p,
+                 className: TARGET_CLASSES[i.toString()]
             };
-          })
-          .sort(function(a, b) {
-            return b.probability - a.probability;
-          })
-          .slice(0, 6);
+         })
+        .sort(function(a, b) {
+        return b.probability - a.probability;
+        })
+       .slice(0, 5);
+
+
 
         $("#prediction-list").empty();
         top5.forEach(function(p) {
